--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: 'NHaasGroteskDSPro';
+  src: url('/fonts/NHaasGroteskDSPro-55Rg.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: -0.02;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
